# team6-opal-verifier

./: .gitignore  PROGRESS.md  README.md  TODO.md  project_analysis_ko.md  pyproject.toml  server_access.md  setup.sh
configs/: train_manifest.cycle7.json  wandb_sweep.yaml
docs/: README.md  SUBMISSION_GUIDE.md  agent_handoff.md  approach_ko.md  architecture_audit.md  current_self_instruct_data_plan.md  current_task.md  cycle_tracker.md  data_protocol.md  leaderboard_log.md  metamorphic_coverage_application_ko.md  methodology_survey_ko.md  overfitting_analysis.md  papers.md  rag_cycle_log.md  rule_coverage_research_ko.md  server_operations_current.md  server_setup.md  spec_rules.md  submission_log.md  sweep_plan.md
src/: __init__.py  embedding_classifier.py  llm_solver.py  lora_solver.py  probe_solver.py  rag.py  solver.py  spec_solver.py
tests/: test_audit_public20_reference.py  test_audit_self_instruct_quality.py  test_build_public20_train_val_split.py  test_build_supervised_manifest.py  test_check_manifest_model_input_equivalence.py  test_compare_public20_dimensions.py  test_data_audit_defaults.py  test_dedup_self_instruct_candidates.py  test_eval_manifest_adapter_metrics.py  test_eval_manifest_full_model.py  test_eval_trl_sft_public20_generation.py  test_eval_trl_sft_public20_logprob.py  test_filter_self_instruct_judge.py  test_generate_gap_data_defaults.py  test_generate_long_shape_source.py  test_generate_spec_data_cli.py  test_parse_self_instruct_outputs.py  test_prepare_public20_sft_dataset.py  test_prepare_submit_script.py  test_run_manifest_lora_sweep.py  test_run_self_instruct_generation.py  test_run_trl_sft_public20.py  test_runtime_smoke_submit_package.py  test_select_manifest_sweep_candidate.py  test_self_instruct_candidate_schema.py  test_self_instruct_command_records.py  test_self_instruct_final_response_invariant.py  (+8 more)
(+692 files in other folders)
